# nexus-boot

./: Cargo.toml  README.md  rust-toolchain.toml  toml
bootloader /: Cargo.toml
bootloader /src/: lib.rs  main. rs  main.rs
bootloader /src/boot/: driver_injector.rs  iso_loader.rs  mod.rs
bootloader /src/gui/: file_manager.rs  menu.rs  mod.rs  theme.rs
bootloader /src/pxe/: server.rs
