[package]
name = "nexus-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
limine-uefi = { workspace = true }
uefi = { workspace = true }
log = { workspace = true }
goblin = { workspace = true }
ntfs = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
